bin_PROGRAMS = simplecalc


# set the include path found by configure
INCLUDES = $(all_includes)

# the library search path.
simplecalc_LDFLAGS = $(all_libraries) 
simplecalc_SOURCES = main.cpp sslexscanner.h sslrparser.h sslexscanner.cpp \
	sslrparser.cpp sslrtermdef.h
AM_CXXFLAGS = -O0 -g3 -march=athlon64
