bin_PROGRAMS = sslr


# set the include path found by configure
INCLUDES = $(all_includes)

# the library search path.
sslr_LDFLAGS = $(all_libraries) 
sslr_SOURCES =  hashclass.cpp hashclass.h lrparser.cpp lrparser.h main.cpp scanner.cpp scanner.h sslr.h terminal.cpp terminal.h
AM_CXXFLAGS = -O0 -Wall -g3
