####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = testflex

## INCLUDES were found outside kdevelop specific part

testflex_SOURCES = test.l libyywrap.c 
testflex_LDADD   = 

SUBDIRS = docs 

EXTRA_DIST = libyywrap.c test.l test.c 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
testflex_LDFLAGS = $(all_libraries) 
                                                                                
